# trustex-distributed-encryption

./: AttestedSetup_Test_Report.md  Cargo.toml  HbTPKE-TEE Draft 3.md  HbTPKE-TEE.md  LICENSE  Practical_Mempool_Privacy.md  README.MD  commit_message.txt  project_analysis_report.md  subplanA.md
batch-threshold/: Cargo.toml
batch-threshold/benches/: attestation_vs_crypto.rs  dealer_comparison.rs
batch-threshold/examples/: attested_dealer_demo.rs  attested_setup_demo.rs  dealer_performance_comparison.rs  endtoend.rs  envelope_demo.rs  hbtpke_evaluation_metrics.rs  rq1_setup_efficiency.rs
batch-threshold/src/: attestation.rs  attested_dealer.rs  attested_setup.rs  dealer.rs  dealer_consistency.rs  dealer_ra.rs  dealer_transcript.rs  decryption.rs  encryption.rs  envelope.rs  lib.rs  verification.rs
batch-threshold/src/tests/: attestation_tests.rs  attested_dealer_tests.rs  mod.rs
examples/: baseline_measurements.rs
ingress-svc/: Cargo.toml
ingress-svc/src/: main.rs
