[workspace]
members = ["batch-threshold", "ingress-svc"]
resolver = "2"

[workspace.dependencies]
ark-poly = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = [
    "print-trace",
    "std",
] }
ark-serialize = { version = "0.5.0", default-features = false, features = [
    "derive",
] }
ark-bls12-381 = { version = "0.5.0", default-features = false, features = [
    "curve",
] }
blake3 = { version = "1.0", default-features = false }
merlin = { version = "3.0", default-features = false }
retry = { version = "2.0", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
rand = { version = "0.8", features = ["std"] }
thiserror = { version = "1.0" }
ed25519-dalek = { version = "2.0" }
axum = { version = "0.7" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
anyhow = "1"

[profile.dev]
opt-level = 3