[package]
name = "batch-threshold"
version = "0.1.0"
edition = "2021"
authors = ["Guru-Vamsi Policharla"]

[dependencies]
ark-poly = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-std = { workspace = true }
ark-serialize = { workspace = true }
ark-bls12-381 = { workspace = true }
blake3 = { workspace = true }
merlin = { workspace = true }
retry = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
zeroize = "1"
ed25519-dalek = { workspace = true, optional = true }

[features]
asm = ["ark-ff/asm"]
tee-ingress = []                  # from Subplan A (already present in your repo-after-A)
tee-dealer = []                   # NEW: enables AttestedDealer types & checks
dev-attest = ["ed25519-dalek"]    # NEW: enable dev Ed25519 signing/verification
default = []

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "partial_decryption"
harness = false

[[bench]]
name = "decrypt_all"
harness = false

[[bench]]
name = "attestation_vs_crypto"
harness = false
